fix: add spacing around cart items

--- a/cake-store/css/style.css
+++ b/cake-store/css/style.css
@@ -92,6 +92,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  padding: 1rem;
 }
 
 .cart-mini {
